update information for physikon 2023

--- a/_includes/index/header.html
+++ b/_includes/index/header.html
@@ -1,6 +1,8 @@
 <div class="jumbotron jumbotron-fluid physikon-jumbotron px-3 text-white text-center">
   <img class="header-logo" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="PhysiKon">
-  <h2 class="gray">Im Frühling 2023 geht es wieder los! <br>
+  <h2 class="gray">17. - 19. April 2023 Online Vorträge <br>
+    13 - 18 Uhr Zoom <br><br>
+    20. April 2023 Jobmesse <br> 10-16Uhr EF50
   </h2>
 </div>
 
