--- a/_includes/index/information.html
+++ b/_includes/index/information.html
@@ -1,15 +1,15 @@
 <div class="container pt-4 text-center text-gray">
 
-  <h2 class="text-uppercase text-secondary mb-0 h2-fontsize"> Die PhysiKon 2023 findet online und
+  <h2> Die PhysiKon 2023 findet online und
     in Präsenz statt!</h2>
+  {% comment %}
   <br>
-  <h3>Für die Online Vorträge müsst ihr euch einmalig registrieren!</h3>
-  <h3> <a href="https://tu-dortmund.zoom.us/meeting/register/tJcrduyrqjsvGNY2hORq-oBAoQMhVFmooIjU">Hier anmelden!</a>
-  </h3>
+  <h3>Für die Online Vorträge müsst ihr euch einmalig registrieren!</h3> 
   <h3>Für die Teilnahme an der Präsenzmesse am Campus der TU Dortmund ist keine Anmeldung nötig. Kommt einfach vorbei!
     <br>
     Die PhysiKon ist kostenlos!
   </h3>
+  {% endcomment %}
   <br>
   <div class="row pb-5">
     <div class="col-sm">
@@ -25,12 +25,12 @@
     <div class="col-sm">
       <h3><i class="fas fa-calendar-alt"></i> Datum</h3>
       <p>
-      <h5> xy. - xy. April 2023</h5>
+      <h5> 17. - 20. April 2023</h5>
     </div>
     <div class="col-sm">
       <h3><i class="fas fa-clock"></i> Uhrzeit</h3>
       <p>
-      <h5> Online: <br>xy. - xy. April: 13 - 18 Uhr <br> Messetag: <br> xy. April: 10 - 16 Uhr</h5>
+      <h5> Online: <br>17. - 19. April: 13 - 18 Uhr <br> Messetag: <br> 20. April: 10 - 16 Uhr</h5>
       </p>
     </div>
   </div>
