--- a/_includes/unternehmen/unternehmen.html
+++ b/_includes/unternehmen/unternehmen.html
@@ -9,45 +9,29 @@
 
 <div class="container pt-5">
 
+
   <h3>Ihre Unternehmenspräsentation bei der PhysiKon 2023</h3>
-
+  <br>
   <p style="font-size: 1.2rem">
-    Die Planung der PhysiKon 2023 beginnt im November 2022.
-  </p>
-
-  {% comment %}
-  <h3>Ihre Unternehmenspräsentation bei der PhysiKon 2023</h3>
-
-  <h5>Format und Termin</h5>
-  <p style="font-size: 1.2rem">
-    Die PhysiKon 2022 soll nach einer reinen Online-PhysiKon 2021 wieder den persönlichen Kontakt zwischen Unternehmen
-    und Studierenden im Rahmen einer Jobmesse ermöglichen.
-    Die Messe wird am 28.04.2022 auf dem Campus der TU Dortmund stattfinden.
-    Bereits 2019 fand die erste PhysiKon als Präsenzmesse statt.
-    Hier konnten sich 15 Unternehmen im Laufe eines Tages rund 400 Studierenden präsentieren.
-    Dennoch hat die PhysiKon 2021 gezeigt, dass auch Online-Vorträge einige Vorteile mit sich bringen:
-    Zum Beispiel können Sie Ihr Unternehmen innerhalb einer Stunde einer größeren Anzahl von Studierenden vorstellen und
-    es werden in größerer Runde wertvolle Fragen von Studierenden mit unterschiedlichsten Interessen gestellt.
-    Daher möchten wir im Vorlauf der Jobmesse, 25.-27.04.2022, Online-Vorträge via Zoom veranstalten, an denen Sie neben
-    der Jobmesse teilnehmen können.
-
-  </p>
+    Die PhysiKon 2023 setzt sich wie im letzten Jahr in einem hybriden Format aus klassischer Jobmesse 
+    und Online Vorträgen der teilnehmenden Unternehmen zusammen.
+  </p> <br>
+    
 
   <h5>Jobmesse</h5>
   <p style="font-size: 1.2rem">
     Auf unserer Jobmesse haben Sie die Möglichkeit an Ihrem Messestand mit Studierenden in Kontakt zu treten.
-    Die Messe soll am 28.04.2022 auf dem Campus der TU Dortmund stattfinden.
-    Natürlich können wir den Stand der Coronapandemie im April 2022 nicht voraussehen.
-    Über die genauen Zugangsvoraussetzungen für Teilnehmende sowie das Hygienekonzept werden wir so früh wie möglich
-    informieren.
-    Das hybride Format aus Online-Vorträgen und Präsenzmesse bietet Ihnen und uns die Planungssicherheit, dass zumindest
-    ein Teil der PhysiKon unabhängig von der pandemischen Lage stattfinden wird.
-  </p>
+    Die Messe findet am Donnerstag, dem 20.04.23, 10-16Uhr auf dem Campus der TU Dortmund statt (Emil-Figge-Str. 50).
+    Die Stände können frei von Ihnen gestaltet werden. Bitte beachten Sie, das die Aufbauten innerhalb einer 
+    Fläche von 2,5x2,5m Platz finden müssen. Die Stände sind mit Strom versorgt und bei Bedarf können wir 
+    Stehtische zur Verfügung stellen.
+  </p> <br>
 
 
   <h5>Online Vortrag</h5>
   <p style="font-size: 1.2rem">
-    Jedes Unternehmen hat eine Stunde Zeit sich den interessierten Studierenden vorzustellen.
+    Im Vorfeld der Präsenzmesse, 17.-19.04.23, bieten wir jeweils zwischen 13 und 18Uhr ein Online Programm via Zoom an. 
+    Hier hat jedes Unternehmen eine Stunde Zeit sich den interessierten Studierenden vorzustellen.
     Diese Stunde kann relativ frei gestaltet werden.
     Wir stellen uns einen einleitenden Vortrag vor, der über Ihr Unternehmen und den klassischen Aufgabenbereich für
     MINT-Fachkräfte erzählt.
@@ -57,15 +41,12 @@
     werden kann.
     Um die technische Umsetzung der Zoom-Konferenz kümmern wir uns, Sie müssen lediglich über einen Internet-Browser
     verfügen.
-    Die Zeiteinteilung für die einzelnen Tage wird Anfang 2022 erfolgen, wenn alle Ausstellerplätze vergeben sind.
-    Falls es in Ihrem Unternehmen aus irgendwelchen Gründen nicht möglich ist, Zoom zu verwenden, können wir Webex als
-    Alternative anbieten.
   </p>
 
   <h5>Messekatalog</h5>
   <p style="font-size: 1.2rem">
-    Zur PhysiKon wird ein Messekatalog erscheinen, der kostenlos online zur Verfügung gestellt wird.
-    Im Katalog können Sie Ihr Unternehmen auf einer Doppelseite vorstellen und Ihre Kontaktinformationen angeben.
+    Zur PhysiKon wird ein Online Messekatalog erscheinen, der kostenlos zur Verfügung gestellt wird.
+    Im Katalog können Sie Ihr Unternehmen vorstellen und Ihre Kontaktinformationen angeben.
     Der Katalog wird während und nach der Veranstaltung auf unserer Webseite zur Verfügung stehen.
   </p>
 
@@ -75,34 +56,23 @@
     In Kooperation mit der <b>Jobbörse</b> von PeP et al. bieten wir einen Stellenmarkt an, auf dem Sie gerne aktuelle
     offene Stellen, Praktika oder Traineeprogramme veröffentlichen können.
     Bitte senden Sie dazu Ihre Anzeigen an <a href="mailto:jobboerse@pep-dortmund.org">physikon@pep-dortmund.org</a>.
-    Die Jobbörse ist auch vor und nach der PhysiKon 2022 erreichbar.
+    Die Jobbörse ist auch vor und nach der PhysiKon 2023 erreichbar.
   </p>
 
 
   <h5>Ausstellergebühr</h5>
   <p style="font-size: 1.2rem">
-    Die Ausstellergebühr für die Präsenzmesse am 28.04.2022 beträgt 1000€.
+    Die Ausstellergebühr für die Präsenzmesse am 20.04.23 beträgt 1300€.
     Zudem haben Sie als ausstellendes Unternehmen die Möglichkeit einen Online Vortrag ohne zusätzliche Gebühren zu
-    halten.
-    Möchten Sie lediglich an dem Online-Programm teilnehmen, beträgt die Gebühr 750€.
+    halten. Möchten Sie lediglich an dem Online-Programm teilnehmen, beträgt die Gebühr 800€.
     Selbstverständich stellen wir Ihnen eine Rechnung über Ihren Beitrag aus.
 
   <h5>Fristen</h5>
   <p style="font-size: 1.2rem">
-    Da sich die pandemische Lage sehr dynamisch entwickelt, können Sie Ihren Ausstellerplatz für die Präsenzmesse bis
-    zum 14.04.2022 (2 Wochen vorher) absagen.
-    Falls Sie den Online-Vortrag nicht wahrnehmen können, bitten wir bis zum 03.03.2022 (8 Wochen vorher) um Absage.
-    Die Ausstellergebühren erhalten Sie bei einer fristgerechten Absage zurück.
-    Sollte die Präsenzmesse nicht stattfinden können, berechnen wir nur die Gebühren für den Online-Vortrag (750€).
+    Falls Sie Ihre Teilnahme an der PhysiKon nicht wahrnehmen können, bitten wir bis zum 23.02.2023 (8 Wochen vorher) um Absage.
+    Die Ausstellergebühren entfallen bei einer fristgerechten Absage.
   </p>
 
-  <p style="font-size: 1.2rem">
-    Der gemeinnützige Verein PeP et al. e.V. freut sich über Spenden mit denen
-    Projekte und Stipendien für die Physikstudierenden der TU Dortmund finanziert werden.
-    Falls Sie sich über unsere Arbeit informieren möchten, besuchen Sie gerne
-    die <a href="https://pep-dortmund.org/" target="_blank" rel="noopener noreferrer">Webseite von PeP et al</a>.
-</div>
-{% endcomment %}
 
 
 <h3 class="mt-2">Kontakt</h3>
@@ -111,6 +81,13 @@
     href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.
   <br>
   Wir beantworten Ihnen gerne Ihre Fragen und nehmen Ihre Anmeldung zur Messe entgegen.
+  <br>
+  <p style="font-size: 1.2rem">
+    Der gemeinnützige Verein PeP et al. e.V. freut sich über Spenden mit denen
+    Projekte und Stipendien für die Physikstudierenden der TU Dortmund finanziert werden.
+    Falls Sie sich über unsere Arbeit informieren möchten, besuchen Sie gerne
+    die <a href="https://pep-dortmund.org/" target="_blank" rel="noopener noreferrer">Webseite von PeP et al</a>.
+
 </p>
 
 
