Revert "update information for physikon 2023"

--- a/_includes/programm/programm.html
+++ b/_includes/programm/programm.html
@@ -11,23 +11,26 @@
 
   <h3>Programm </h3>
 
-
   <p style="font-size: 1.2rem">
-    Zusätzlich zu der Jobmesse am 20.04.23 auf dem Campus der TU Dortmund bieten wir im Zeitraum 17.-19.04.23 
-    ein breites Online-Angebot an.
-    Hier haben Unternehmen eine Stunde Zeit sich euch im Rahmen eines Vortrags via Zoom vorzustellen.
+    Hier findet ihr das Programm der PhysiKon ab dem Frühjahr 2023. Wir freuen uns sehr auf euch!
+  </p>
+
+  {% comment %}
+  <p style="font-size: 1.2rem">
+    Zusätzlich zu der Jobmesse am 28.04.22 auf dem Campus der TU Dortmund bieten wir ein breites Online-Angebot an.
+    Hier haben Unternehmen eine Stunde Zeit sich euch im Rahmen eines Vortrags via <a
+      href="https://tu-dortmund.zoom.us/meeting/register/tJcrduyrqjsvGNY2hORq-oBAoQMhVFmooIjU">Zoom</a> vorzustellen.
     Ihr habt hier die Gelegenheit die Aussteller schon mal kennen zu lernen und sie mit Fragen zu löchern.
-    Der Zeitplan für die Online-Vorträge sowie die Anmeldung zu den Zoom Meetings wird in kürze an dieser Stelle 
-    erscheinen. 
-{% comment %}
+
+
   <table class="styled-table">
 
     <thead>
       <tr>
         <th>Zeit</th>
-        <th>17.04.2022</th>
-        <th>18.04.2022</th>
-        <th>19.04.2022</th>
+        <th>25.04.2022</th>
+        <th>26.04.2022</th>
+        <th>27.04.2022</th>
       </tr>
     </thead>
     <tr>
@@ -61,7 +64,6 @@
       <td><a href="https://www.tngtech.com">TNG Consulting</a></td>
     </tr>
   </table>
-  {% endcomment %}
-
   </p>
+  {% endcomment %}
 </div>
