--- a/_includes/unternehmen/unternehmen.html
+++ b/_includes/unternehmen/unternehmen.html
@@ -13,24 +13,24 @@
   <h3>Ihre Unternehmenspräsentation bei der PhysiKon 2023</h3>
   <br>
   <p style="font-size: 1.2rem">
-    Die PhysiKon 2023 setzt sich wie im letzten Jahr in einem hybriden Format aus klassischer Jobmesse 
-    und Online Vorträgen der teilnehmenden Unternehmen zusammen.
+    Die PhysiKon 2023 findet wie im letzten Jahr in einem hybriden Format aus klassischer Jobmesse 
+    und Online Vorträgen der teilnehmenden Unternehmen statt.
   </p> <br>
     
 
   <h5>Jobmesse</h5>
   <p style="font-size: 1.2rem">
-    Auf unserer Jobmesse haben Sie die Möglichkeit an Ihrem Messestand mit Studierenden in Kontakt zu treten.
-    Die Messe findet am Donnerstag, dem 20.04.23, 10-16Uhr auf dem Campus der TU Dortmund statt (Emil-Figge-Str. 50).
+    Auf unserer Jobmesse haben Sie die Möglichkeit, an Ihrem Messestand mit Studierenden in Kontakt zu treten.
+    Die Messe findet am Donnerstag, dem 20.04.2023, 10 - 16 Uhr auf dem Campus der TU Dortmund statt (Emil-Figge-Str. 50).
     Die Stände können frei von Ihnen gestaltet werden. Bitte beachten Sie, das die Aufbauten innerhalb einer 
-    Fläche von 2,5x2,5m Platz finden müssen. Die Stände sind mit Strom versorgt und bei Bedarf können wir 
+    Fläche von 2,5m x 2,5m Platz finden müssen. Die Stände sind mit Strom versorgt und bei Bedarf können wir 
     Stehtische zur Verfügung stellen.
   </p> <br>
 
 
   <h5>Online Vortrag</h5>
   <p style="font-size: 1.2rem">
-    Im Vorfeld der Präsenzmesse, 17.-19.04.23, bieten wir jeweils zwischen 13 und 18Uhr ein Online Programm via Zoom an. 
+    Im Vorfeld der Präsenzmesse, 17. - 19.04.2023, bieten wir jeweils zwischen 13 und 18 Uhr ein Online-Programm via Zoom an. 
     Hier hat jedes Unternehmen eine Stunde Zeit sich den interessierten Studierenden vorzustellen.
     Diese Stunde kann relativ frei gestaltet werden.
     Wir stellen uns einen einleitenden Vortrag vor, der über Ihr Unternehmen und den klassischen Aufgabenbereich für
@@ -45,7 +45,7 @@
 
   <h5>Messekatalog</h5>
   <p style="font-size: 1.2rem">
-    Zur PhysiKon wird ein Online Messekatalog erscheinen, der kostenlos zur Verfügung gestellt wird.
+    Zur PhysiKon wird auf unserer Homepage ein Online-Messekatalog erscheinen.
     Im Katalog können Sie Ihr Unternehmen vorstellen und Ihre Kontaktinformationen angeben.
     Der Katalog wird während und nach der Veranstaltung auf unserer Webseite zur Verfügung stehen.
   </p>
@@ -62,8 +62,8 @@
 
   <h5>Ausstellergebühr</h5>
   <p style="font-size: 1.2rem">
-    Die Ausstellergebühr für die Präsenzmesse am 20.04.23 beträgt 1300€.
-    Zudem haben Sie als ausstellendes Unternehmen die Möglichkeit einen Online Vortrag ohne zusätzliche Gebühren zu
+    Die Ausstellergebühr für die Präsenzmesse am 20.04.2023 beträgt 1300€.
+    Zudem haben Sie als ausstellendes Unternehmen die Möglichkeit, einen Online-Vortrag ohne zusätzliche Gebühren zu
     halten. Möchten Sie lediglich an dem Online-Programm teilnehmen, beträgt die Gebühr 800€.
     Selbstverständich stellen wir Ihnen eine Rechnung über Ihren Beitrag aus.
 
