--- a/_includes/programm/programm.html
+++ b/_includes/programm/programm.html
@@ -13,11 +13,11 @@
 
 
   <p style="font-size: 1.2rem">
-    Zusätzlich zu der Jobmesse am 20.04.23 auf dem Campus der TU Dortmund bieten wir im Zeitraum 17.-19.04.23 
+    Zusätzlich zu der Jobmesse am 20.04.2023 auf dem Campus der TU Dortmund bieten wir im Zeitraum 17. - 19.04.2023 
     ein breites Online-Angebot an.
     Hier haben Unternehmen eine Stunde Zeit sich euch im Rahmen eines Vortrags via Zoom vorzustellen.
-    Ihr habt hier die Gelegenheit die Aussteller schon mal kennen zu lernen und sie mit Fragen zu löchern.
-    Der Zeitplan für die Online-Vorträge sowie die Anmeldung zu den Zoom Meetings wird in kürze an dieser Stelle 
+    Ihr habt hier die Gelegenheit, die Aussteller schon mal kennen zu lernen und sie mit Fragen zu löchern.
+    Der Zeitplan für die Online-Vorträge sowie die Anmeldung zu den Zoom-Meetings wird in kürze an dieser Stelle 
     erscheinen. 
 {% comment %}
   <table class="styled-table">
