--- a/_includes/index/unternehmen_grid.html
+++ b/_includes/index/unternehmen_grid.html
@@ -1,5 +1,5 @@
-%<section class="portfolio" id="portfolio">
-  <div class="container mx-auto">
+<section class="portfolio" id="portfolio">
+  <div class="container pt-5 mx-auto">
 
     <h2 class="text-center text-gray text-uppercase text-secondary mb-0 h2-fontsize">Unternehmen</h2>
     <hr class="star-dark">
@@ -17,5 +17,5 @@
     </div>
 
   </div>
-  %
+
 </section>
