--- a/_includes/katalog/katalog.html
+++ b/_includes/katalog/katalog.html
@@ -6,7 +6,7 @@
   <hr class="star-dark">
 
   <!-- Carousel -->
-  <div id="{{ include.name }}" class="carousel slide" data-ride="carousel" data-interval="false">
+  <div id="katalog-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
     <div class="carousel-inner">
 
       {% for unternehmen in site.data.unternehmen_2023 %}
@@ -14,9 +14,11 @@
         <div class="container pt-2">
           <div class="row justify-content-center">
             <div class="col-12 col-xl-8 col-lg-8 col-md-11 col-sm-12">
-              <div class="row pt-3 pb-3 justify-content-center">
-                <img src={{unternehmen.logo}} alt="" style="width:60%;margin:auto">
-              </div>
+              <a class="mx-auto" href="{{ unternehmen.url }}" target="_blank">
+                <div class="row pt-3 pb-3 justify-content-center">
+                  <img src={{unternehmen.logo}} alt="" style="width:60%;margin:auto">
+                </div>
+              </a>
               <div class="container pt-2">
                 <p style="font-size: 1.2rem">
                   {{unternehmen.text}}
@@ -68,7 +70,7 @@
       <div class="container pt-5">
         <ol class="carousel-indicators">
           {% for unternehmen in site.data.unternehmen_2023 %}
-          <li data-target="#{{ include.name }}" data-slide-to="{{ forloop.index0 }}"
+          <li data-target="#katalog-carousel" data-slide-to="{{ forloop.index0 }}"
             class="{% if forloop.first == true %}active{% endif %}">
           </li>
           {% endfor %}
@@ -77,11 +79,11 @@
 
     </div>
 
-    <a class="carousel-control-prev" href="#{{ include.name }}" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#katalog-carousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon fas fa-angle-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#{{ include.name }}" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#katalog-carousel" role="button" data-slide="next">
       <span class="carousel-control-next-icon fas fa-angle-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
