--- a/_includes/index/unternehmen_grid.html
+++ b/_includes/index/unternehmen_grid.html
@@ -7,9 +7,11 @@
     <div class="row justify-content-center">
       {% for unternehmen in site.data.unternehmen_2023 %}
       <div class="col-xl-3 col-md-4 col-6 grid-col">
-        <a class="mx-auto" href="{{ unternehmen.url }}" target="_blank">
+        <a class="mx-auto"
+          href="{% if unternehmen.text %}{% link katalog.html %}#{{ unternehmen.name }}{% else %}{{ unternehmen.url }}{% endif %}"
+          {% unless unternehmen.text %}target="_blank" {% endunless %}>
           <div class=frame>
-            <img class="logo" src="{{ unternehmen.logo }}" alt="">
+            <img class="logo" src="{{ unternehmen.logo }}" alt="{{ unternehmen.name }}">
           </div>
         </a>
       </div>
