fix whitespace bug

--- a/_includes/katalog/katalog.html
+++ b/_includes/katalog/katalog.html
@@ -12,7 +12,8 @@
       {% assign katalog_unternehmen = site.data.unternehmen_2023 | where_exp: "unternehmen", "unternehmen.text and
       unternehmen.text != ''" %}
       {% for unternehmen in katalog_unternehmen %}
-      <div class="carousel-item {%- if forloop.first == true %} active {%- endif -%}" id="{{ unternehmen.name }}">
+      <div class="carousel-item {%- if forloop.first == true %} active {%- endif -%}"
+        id="{{ unternehmen.name | replace: ' ', '_' | escape}}">
         <div class="container pt-2">
           <div class="row justify-content-center">
             <div class="col-12 col-xl-8 col-lg-8 col-md-11 col-sm-12">
