--- a/_includes/index/unternehmen_grid.html
+++ b/_includes/index/unternehmen_grid.html
@@ -8,7 +8,7 @@
       {% for unternehmen in site.data.unternehmen_2023 %}
       <div class="col-xl-3 col-md-4 col-6 grid-col">
         <a class="mx-auto"
-          href="{% if unternehmen.text and unternehmen.text != '' %}{% link katalog.html %}#{{ unternehmen.name | replace: ' ', '_' | escape}}{% else %}{{ unternehmen.url }}{% endif %}"
+          href="{% if unternehmen.text and unternehmen.text != '' %}{% link katalog.html %}#{{ unternehmen.name | url_encode }}{% else %}{{ unternehmen.url }}{% endif %}"
           {% unless unternehmen.text and unternehmen.text !='' %}target="_blank" {% endunless %}>
           <div class=frame>
             <img class="logo" src="{{ unternehmen.logo }}" alt="{{ unternehmen.name }}">
