--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,13 +10,11 @@
 
   <!-- CSS -->
   <!-- Add version number as GET parameter. CSS will be refreshed in every visitor's cache. -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
   <link href="/css/custom.css?version=51" rel="stylesheet">
   <link href="/css/freelancer.css" rel="stylesheet">
-
-  <!-- OpenStreetMap -->
-  <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/css/ol.css"
-    type="text/css">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
